--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
 
+  <!-- BOOTSTRAP -->
+
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+
+
   <!-- Custom stylesheet -->
 
   <link rel="stylesheet" href="SCSS/styles.css">
@@ -37,138 +42,189 @@
 <body>
 
 
-  <div class="top-container">
+  <div class="container">
 
-    <div class="profile">
-      Report for
-      Jeremy Robson
+    <div class="row justify-content-center">
+
+      <div class="main-nav">
+
+        <div class="views">
+
+          <div class="profile">
+            Report for
+            Jeremy Robson
+          </div>
+
+          Daily
+          Weekly
+          Monthly
+        </div>
+
+      </div>
+
+      <div class="tracker">
+
+        <div id="work" class="tracker-header">
+
+          <div class="tracker-body">
+            Work
+            5hrs
+            <!-- daily -->
+            Previous - 7hrs
+            <!-- daily -->
+            32hrs
+            <!-- weekly -->
+            Previous - 36hrs
+            <!-- weekly -->
+            103hrs
+            <!-- monthly -->
+            Previous - 128hrs
+            <!-- monthly -->
+          </div>
+
+        </div>
+
+
+
+      </div>
+
+      <div class="tracker">
+
+        <div id="play" class="tracker-header">
+
+          <div class="tracker-body">
+            Play
+            1hr
+            <!-- daily -->
+            Previous - 2hrs
+            <!-- daily -->
+            10hrs
+            <!-- weekly -->
+            Previous - 8hrs
+            <!-- weekly -->
+            23hrs
+            <!-- monthly -->
+            Previous - 29hrs
+            <!-- monthly -->
+          </div>
+
+        </div>
+
+
+
+      </div>
+
+      <div class="tracker">
+
+        <div id="study" class="tracker-header">
+
+          <div class="tracker-body">
+            Study
+            0hrs
+            <!-- daily -->
+            Previous - 1hr
+            <!-- daily -->
+            4hrs
+            <!-- weekly -->
+            Previous - 7hrs
+            <!-- weekly -->
+            13hrs
+            <!-- monthly -->
+            Previous - 19hrs
+            <!-- monthly -->
+          </div>
+
+        </div>
+
+
+      </div>
+
     </div>
 
-    <div class="views">
-      Daily
-      Weekly
-      Monthly
+    <div class="row justify-content-center">
+
+      <div class="tracker">
+
+        <div id="exercise " class="tracker-header">
+
+          <div class="tracker-body">
+            Exercise
+            1hr
+            <!-- daily -->
+            Previous - 1hr
+            <!-- daily -->
+            4hrs
+            <!-- weekly -->
+            Previous - 5hrs
+            <!-- weekly -->
+            11hrs
+            <!-- monthly -->
+            Previous - 18hrs
+            <!-- monthly -->
+          </div>
+
+        </div>
+
+
+      </div>
+
+      <div class="tracker">
+
+        <div id="self-care" class="tracker-header">
+
+          <div class="tracker-body">
+            Self Care
+            0hrs
+            <!-- daily -->
+            Previous - 1hr
+            <!-- daily -->
+            2hrs
+            <!-- weekly -->
+            Previous - 2hrs
+            <!-- weekly -->
+            7hrs
+            <!-- monthly -->
+            Previous - 11hrs
+            <!-- monthly -->
+          </div>
+
+
+        </div>
+
+
+
+      </div>
+
+      <div class="tracker">
+
+        <div id="social" class="tracker-header">
+
+          <div class="tracker-body">
+            Social
+            1hr
+            <!-- daily -->
+            Previous - 3hrs
+            <!-- daily -->
+            5hrs
+            <!-- weekly -->
+            Previous - 10hrs
+            <!-- weekly -->
+            21hrs
+            <!-- monthly -->
+            Previous - 23hrs
+            <!-- monthly -->
+          </div>
+
+
+        </div>
+
+
+
+      </div>
+
     </div>
 
   </div>
-
-  <div class="tracker-container">
-
-    <div class="tracker">
-
-      <div class="tracker-header"></div>
-
-      <div class="work tracker-body">
-        Work
-        5hrs
-        <!-- daily -->
-        Previous - 7hrs
-        <!-- daily -->
-        32hrs
-        <!-- weekly -->
-        Previous - 36hrs
-        <!-- weekly -->
-        103hrs
-        <!-- monthly -->
-        Previous - 128hrs
-        <!-- monthly -->
-      </div>
-
-    </div>
-
-    <div class="tracker">
-
-      <div class="tracker-header"></div>
-
-      <div class="play tracker-body">
-        Play
-        1hr
-        <!-- daily -->
-        Previous - 2hrs
-        <!-- daily -->
-        10hrs
-        <!-- weekly -->
-        Previous - 8hrs
-        <!-- weekly -->
-        23hrs
-        <!-- monthly -->
-        Previous - 29hrs
-        <!-- monthly -->
-      </div>
-    </div>
-
-    <div class="tracker">
-
-      <div class="tracker-header"></div>
-
-      <div class="study tracker-body">
-        Study
-        0hrs
-        <!-- daily -->
-        Previous - 1hr
-        <!-- daily -->
-        4hrs
-        <!-- weekly -->
-        Previous - 7hrs
-        <!-- weekly -->
-        13hrs
-        <!-- monthly -->
-        Previous - 19hrs
-        <!-- monthly -->
-      </div>
-
-    </div>
-
-    <div class="tracker">
-
-      <div class="tracker-header"></div>
-
-      <div class="exercise tracker-body">
-        Exercise
-        1hr
-        <!-- daily -->
-        Previous - 1hr
-        <!-- daily -->
-        4hrs
-        <!-- weekly -->
-        Previous - 5hrs
-        <!-- weekly -->
-        11hrs
-        <!-- monthly -->
-        Previous - 18hrs
-        <!-- monthly -->
-      </div>
-
-    </div>
-
-    <div class="tracker">
-
-      <div class="tracker-header"></div>
-
-      <div class="social tracker-body">
-        Social
-        1hr
-        <!-- daily -->
-        Previous - 3hrs
-        <!-- daily -->
-        5hrs
-        <!-- weekly -->
-        Previous - 10hrs
-        <!-- weekly -->
-        21hrs
-        <!-- monthly -->
-        Previous - 23hrs
-        <!-- monthly -->
-      </div>
-
-    </div>
-
-
-
-
-
-  </div>
-
 
 
 
@@ -181,9 +237,11 @@
 
   <!-- SCRIPTS -->
 
-  <!-- JQuery -->
+  <!-- JQuery and Bootstrap -->
 
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+  <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
 
 </body>
 
