Fix structure using bootstrap and flex

--- a/index.html
+++ b/index.html
@@ -51,13 +51,29 @@
         <div class="views">
 
           <div class="profile">
-            Report for
-            Jeremy Robson
+
+            <div class="profile-pic">
+              <img src="images/image-jeremy.png" alt="Profile Pic">
+            </div>
+
+            <div class="profile-text">
+
+                <p>Report for</p>
+
+                <h2>Jeremy Robson</h2>
+
+            </div>
+
           </div>
 
-          Daily
-          Weekly
-          Monthly
+          <div class="change-view">
+
+            <h3>Daily</h3>
+            <h3>Weekly</h3>
+            <h3>Monthly</h3>
+
+          </div>
+
         </div>
 
       </div>
@@ -66,20 +82,47 @@
 
         <div id="work" class="tracker-header">
 
+          <img class="tracker-icon" src="images/icon-work.svg" alt="Work Icon">
+
           <div class="tracker-body">
-            Work
-            5hrs
-            <!-- daily -->
-            Previous - 7hrs
-            <!-- daily -->
-            32hrs
-            <!-- weekly -->
-            Previous - 36hrs
-            <!-- weekly -->
-            103hrs
+
+            <div class="current">
+
+              <div class="">
+                
+                <h4>Work</h4>
+
+                <h1>5hrs</h1>
+
+              </div>
+
+
+            </div>
+
+            <div class="previous">
+
+              <img src="images/icon-ellipsis.svg" alt="Ellipsis">
+
+              <p>Last Week - 36 hrs</p>
+
+            </div>
+
+
+
+            <!-- daily
+            Previous - 7hrs -->
+            <!-- daily
+            32hrs -->
+            <!-- weekly
+            Previous - 36hrs -->
+            <!-- weekly
+            103hrs -->
+            <!-- monthly
+            Previous - 128hrs -->
             <!-- monthly -->
-            Previous - 128hrs
-            <!-- monthly -->
+
+
+
           </div>
 
         </div>
@@ -92,20 +135,24 @@
 
         <div id="play" class="tracker-header">
 
+          <img src="images/icon-play.svg" alt="Play Icon">
+
           <div class="tracker-body">
             Play
             1hr
-            <!-- daily -->
-            Previous - 2hrs
-            <!-- daily -->
-            10hrs
-            <!-- weekly -->
-            Previous - 8hrs
-            <!-- weekly -->
-            23hrs
+
+            <!-- daily
+            Previous - 7hrs -->
+            <!-- daily
+            32hrs -->
+            <!-- weekly
+            Previous - 36hrs -->
+            <!-- weekly
+            103hrs -->
+            <!-- monthly
+            Previous - 128hrs -->
             <!-- monthly -->
-            Previous - 29hrs
-            <!-- monthly -->
+
           </div>
 
         </div>
@@ -118,20 +165,23 @@
 
         <div id="study" class="tracker-header">
 
+          <img src="images/icon-study.svg" alt="Study Icon">
+
           <div class="tracker-body">
             Study
-            0hrs
-            <!-- daily -->
-            Previous - 1hr
-            <!-- daily -->
-            4hrs
-            <!-- weekly -->
-            Previous - 7hrs
-            <!-- weekly -->
-            13hrs
+
+            <!-- daily
+            Previous - 7hrs -->
+            <!-- daily
+            32hrs -->
+            <!-- weekly
+            Previous - 36hrs -->
+            <!-- weekly
+            103hrs -->
+            <!-- monthly
+            Previous - 128hrs -->
             <!-- monthly -->
-            Previous - 19hrs
-            <!-- monthly -->
+
           </div>
 
         </div>
@@ -145,22 +195,25 @@
 
       <div class="tracker">
 
-        <div id="exercise " class="tracker-header">
+        <div id="exercise" class="tracker-header">
+
+          <img src="images/icon-exercise.svg" alt="Exercise Icon">
 
           <div class="tracker-body">
             Exercise
-            1hr
-            <!-- daily -->
-            Previous - 1hr
-            <!-- daily -->
-            4hrs
-            <!-- weekly -->
-            Previous - 5hrs
-            <!-- weekly -->
-            11hrs
+
+            <!-- daily
+            Previous - 7hrs -->
+            <!-- daily
+            32hrs -->
+            <!-- weekly
+            Previous - 36hrs -->
+            <!-- weekly
+            103hrs -->
+            <!-- monthly
+            Previous - 128hrs -->
             <!-- monthly -->
-            Previous - 18hrs
-            <!-- monthly -->
+
           </div>
 
         </div>
@@ -172,20 +225,23 @@
 
         <div id="self-care" class="tracker-header">
 
+          <img src="images/icon-self-care.svg" alt="Self-care Icon">
+
           <div class="tracker-body">
             Self Care
-            0hrs
-            <!-- daily -->
-            Previous - 1hr
-            <!-- daily -->
-            2hrs
-            <!-- weekly -->
-            Previous - 2hrs
-            <!-- weekly -->
-            7hrs
+
+            <!-- daily
+            Previous - 7hrs -->
+            <!-- daily
+            32hrs -->
+            <!-- weekly
+            Previous - 36hrs -->
+            <!-- weekly
+            103hrs -->
+            <!-- monthly
+            Previous - 128hrs -->
             <!-- monthly -->
-            Previous - 11hrs
-            <!-- monthly -->
+
           </div>
 
 
@@ -199,20 +255,23 @@
 
         <div id="social" class="tracker-header">
 
-          <div class="tracker-body">
+          <img src="images/icon-social.svg" alt="social icon">
+
+          <div class="  tracker-body">
             Social
-            1hr
-            <!-- daily -->
-            Previous - 3hrs
-            <!-- daily -->
-            5hrs
-            <!-- weekly -->
-            Previous - 10hrs
-            <!-- weekly -->
-            21hrs
+
+            <!-- daily
+            Previous - 7hrs -->
+            <!-- daily
+            32hrs -->
+            <!-- weekly
+            Previous - 36hrs -->
+            <!-- weekly
+            103hrs -->
+            <!-- monthly
+            Previous - 128hrs -->
             <!-- monthly -->
-            Previous - 23hrs
-            <!-- monthly -->
+
           </div>
 
 
