Work on responsiveness

--- a/index.html
+++ b/index.html
@@ -44,9 +44,9 @@
 
   <div class="container">
 
-    <div class="row justify-content-center">
+    <div class="row">
 
-      <div class="main-nav">
+      <div class="col-md-4 col-lg-3 main-nav">
 
         <div class="views">
 
@@ -58,9 +58,9 @@
 
             <div class="profile-text">
 
-                <p>Report for</p>
+              <p>Report for</p>
 
-                <h2>Jeremy Robson</h2>
+              <h2>Jeremy Robson</h2>
 
             </div>
 
@@ -78,98 +78,177 @@
 
       </div>
 
-      <div class="tracker">
+      <div class="col-md-8 col-lg-9 all-trackers">
 
-        <div id="work" class="tracker-header">
+        <div class="row">
 
-          <img class="tracker-icon" src="images/icon-work.svg" alt="Work Icon">
+          <div class="col tracker">
+
+            <div id="work" class="tracker-header">
+
+              <img class="tracker-icon" src="images/icon-work.svg" alt="Work Icon">
+
+              <div class="tracker-body">
+
+                <div class="current">
+
+
+                  <h4>Work</h4>
+
+                  <img class="ellipsis" src="images/icon-ellipsis.svg" alt="Ellipsis">
+
+
+                </div>
+
+                <div class="previous">
+
+                  <h1>32hrs</h1>
+
+                  <p>Last Week - 36hrs</p>
+
+                </div>
+
+
+
+                <!-- daily
+                Previous - 7hrs -->
+                <!-- daily
+                32hrs -->
+                <!-- weekly
+                Previous - 36hrs -->
+                <!-- weekly
+                103hrs -->
+                <!-- monthly
+                Previous - 128hrs -->
+                <!-- monthly -->
+
+
+
+              </div>
+
+            </div>
+
+          </div>
+
+          <div class="col tracker">
+
+            <div id="play" class="tracker-header">
+
+              <img class="tracker-icon" src="images/icon-play.svg" alt="Play Icon">
+
+              <div class="tracker-body">
+
+                <div class="current">
+
+
+                  <h4>Play</h4>
+
+                  <img class="ellipsis" src="images/icon-ellipsis.svg" alt="Ellipsis">
+
+
+                </div>
+
+                <div class="previous">
+
+                  <h1>10hrs</h1>
+
+                  <p>Last Week - 36hrs</p>
+
+                </div>
+
+
+                <!-- daily
+                Previous - 7hrs -->
+                <!-- daily
+                32hrs -->
+                <!-- weekly
+                Previous - 36hrs -->
+                <!-- weekly
+                103hrs -->
+                <!-- monthly
+                Previous - 128hrs -->
+                <!-- monthly -->
+
+              </div>
+
+            </div>
+
+
+
+          </div>
+
+          <div class="col tracker">
+
+            <div id="study" class="tracker-header">
+
+              <img class="tracker-icon" src="images/icon-study.svg" alt="Study Icon">
+
+              <div class="tracker-body">
+
+
+                <div class="current">
+
+
+                  <h4>Study</h4>
+
+                  <img class="ellipsis" src="images/icon-ellipsis.svg" alt="Ellipsis">
+
+
+                </div>
+
+                <div class="previous">
+
+                  <h1>4hrs</h1>
+
+                  <p>Last Week - 36hrs</p>
+
+                </div>
+
+                <!-- daily
+                Previous - 7hrs -->
+                <!-- daily
+                32hrs -->
+                <!-- weekly
+                Previous - 36hrs -->
+                <!-- weekly
+                103hrs -->
+                <!-- monthly
+                Previous - 128hrs -->
+                <!-- monthly -->
+
+              </div>
+
+            </div>
+
+
+          </div>
+
+      <div class="col tracker">
+
+        <div id="exercise" class="tracker-header">
+
+          <img class="tracker-icon" src="images/icon-exercise.svg" alt="Exercise Icon">
 
           <div class="tracker-body">
 
             <div class="current">
 
-              <div class="">
-                
-                <h4>Work</h4>
 
-                <h1>5hrs</h1>
+              <h4>Exercise</h4>
 
-              </div>
+              <img class="ellipsis" src="images/icon-ellipsis.svg" alt="Ellipsis">
 
 
             </div>
 
             <div class="previous">
 
-              <img src="images/icon-ellipsis.svg" alt="Ellipsis">
+              <h1>4hrs</h1>
 
-              <p>Last Week - 36 hrs</p>
+              <p>Last Week - 36hrs</p>
 
             </div>
 
-
-
-            <!-- daily
-            Previous - 7hrs -->
-            <!-- daily
-            32hrs -->
-            <!-- weekly
-            Previous - 36hrs -->
-            <!-- weekly
-            103hrs -->
-            <!-- monthly
-            Previous - 128hrs -->
-            <!-- monthly -->
-
-
-
-          </div>
-
-        </div>
-
-
-
-      </div>
-
-      <div class="tracker">
-
-        <div id="play" class="tracker-header">
-
-          <img src="images/icon-play.svg" alt="Play Icon">
-
-          <div class="tracker-body">
-            Play
-            1hr
-
-            <!-- daily
-            Previous - 7hrs -->
-            <!-- daily
-            32hrs -->
-            <!-- weekly
-            Previous - 36hrs -->
-            <!-- weekly
-            103hrs -->
-            <!-- monthly
-            Previous - 128hrs -->
-            <!-- monthly -->
-
-          </div>
-
-        </div>
-
-
-
-      </div>
-
-      <div class="tracker">
-
-        <div id="study" class="tracker-header">
-
-          <img src="images/icon-study.svg" alt="Study Icon">
-
-          <div class="tracker-body">
-            Study
-
             <!-- daily
             Previous - 7hrs -->
             <!-- daily
@@ -189,76 +268,31 @@
 
       </div>
 
-    </div>
-
-    <div class="row justify-content-center">
-
-      <div class="tracker">
-
-        <div id="exercise" class="tracker-header">
-
-          <img src="images/icon-exercise.svg" alt="Exercise Icon">
-
-          <div class="tracker-body">
-            Exercise
-
-            <!-- daily
-            Previous - 7hrs -->
-            <!-- daily
-            32hrs -->
-            <!-- weekly
-            Previous - 36hrs -->
-            <!-- weekly
-            103hrs -->
-            <!-- monthly
-            Previous - 128hrs -->
-            <!-- monthly -->
-
-          </div>
-
-        </div>
-
-
-      </div>
-
-      <div class="tracker">
-
-        <div id="self-care" class="tracker-header">
-
-          <img src="images/icon-self-care.svg" alt="Self-care Icon">
-
-          <div class="tracker-body">
-            Self Care
-
-            <!-- daily
-            Previous - 7hrs -->
-            <!-- daily
-            32hrs -->
-            <!-- weekly
-            Previous - 36hrs -->
-            <!-- weekly
-            103hrs -->
-            <!-- monthly
-            Previous - 128hrs -->
-            <!-- monthly -->
-
-          </div>
-
-
-        </div>
-
-
-
-      </div>
-
-      <div class="tracker">
+      <div class="col tracker">
 
         <div id="social" class="tracker-header">
 
-          <img src="images/icon-social.svg" alt="social icon">
+          <img class="tracker-icon" src="images/icon-social.svg" alt="social icon">
 
           <div class="  tracker-body">
-            Social
+
+            <div class="current">
+
+
+              <h4>Social</h4>
+
+              <img class="ellipsis" src="images/icon-ellipsis.svg" alt="Ellipsis">
+
+
+            </div>
+
+            <div class="previous">
+
+              <h1>5hrs</h1>
+
+              <p>Last Week - 36hrs</p>
+
+            </div>
 
             <!-- daily
             Previous - 7hrs -->
@@ -281,11 +315,59 @@
 
       </div>
 
-    </div>
+
+      <div class="col tracker">
+
+        <div id="self-care" class="tracker-header">
+
+          <img class="tracker-icon" src="images/icon-self-care.svg" alt="Self-care Icon">
+
+          <div class="tracker-body">
+
+            <div class="current">
+
+
+              <h4>Self Care</h4>
+
+              <img class="ellipsis" src="images/icon-ellipsis.svg" alt="Ellipsis">
+
+
+            </div>
+
+            <div class="previous">
+
+              <h1>6hrs</h1>
+
+              <p>Last Week - 36hrs</p>
+
+            </div>
+
+            <!-- daily
+            Previous - 7hrs -->
+            <!-- daily
+            32hrs -->
+            <!-- weekly
+            Previous - 36hrs -->
+            <!-- weekly
+            103hrs -->
+            <!-- monthly
+            Previous - 128hrs -->
+            <!-- monthly -->
+
+          </div>
+
+
+        </div>
+
+
+
+      </div>
+
 
   </div>
 
-
+  </div>
+  </div>
 
 
 
