Finish working on responsiveness, start js and jquery

--- a/index.html
+++ b/index.html
@@ -68,9 +68,9 @@
 
           <div class="change-view">
 
-            <h3>Daily</h3>
-            <h3>Weekly</h3>
-            <h3>Monthly</h3>
+            <a href="#"><h3>Daily</h3></a>
+            <a href="#"><h3>Weekly</h3></a>
+            <a href="#"><h3>Monthly</h3></a>
 
           </div>
 
@@ -92,11 +92,9 @@
 
                 <div class="current">
 
-
                   <h4>Work</h4>
 
-                  <img class="ellipsis" src="images/icon-ellipsis.svg" alt="Ellipsis">
-
+                  <svg width="21" height="5" xmlns="http://www.w3.org/2000/svg"><path class="ellipsis" d="M2.5 0a2.5 2.5 0 1 1 0 5 2.5 2.5 0 0 1 0-5Zm8 0a2.5 2.5 0 1 1 0 5 2.5 2.5 0 0 1 0-5Zm8 0a2.5 2.5 0 1 1 0 5 2.5 2.5 0 0 1 0-5Z" fill="#bdc1ff" fill-rule="evenodd"/></svg>
 
                 </div>
 
@@ -143,7 +141,7 @@
 
                   <h4>Play</h4>
 
-                  <img class="ellipsis" src="images/icon-ellipsis.svg" alt="Ellipsis">
+                  <svg width="21" height="5" xmlns="http://www.w3.org/2000/svg"><path class="ellipsis" d="M2.5 0a2.5 2.5 0 1 1 0 5 2.5 2.5 0 0 1 0-5Zm8 0a2.5 2.5 0 1 1 0 5 2.5 2.5 0 0 1 0-5Zm8 0a2.5 2.5 0 1 1 0 5 2.5 2.5 0 0 1 0-5Z" fill="#bdc1ff" fill-rule="evenodd"/></svg>
 
 
                 </div>
@@ -191,7 +189,7 @@
 
                   <h4>Study</h4>
 
-                  <img class="ellipsis" src="images/icon-ellipsis.svg" alt="Ellipsis">
+                  <svg width="21" height="5" xmlns="http://www.w3.org/2000/svg"><path class="ellipsis" d="M2.5 0a2.5 2.5 0 1 1 0 5 2.5 2.5 0 0 1 0-5Zm8 0a2.5 2.5 0 1 1 0 5 2.5 2.5 0 0 1 0-5Zm8 0a2.5 2.5 0 1 1 0 5 2.5 2.5 0 0 1 0-5Z" fill="#bdc1ff" fill-rule="evenodd"/></svg>
 
 
                 </div>
@@ -236,7 +234,7 @@
 
               <h4>Exercise</h4>
 
-              <img class="ellipsis" src="images/icon-ellipsis.svg" alt="Ellipsis">
+              <svg width="21" height="5" xmlns="http://www.w3.org/2000/svg"><path class="ellipsis" d="M2.5 0a2.5 2.5 0 1 1 0 5 2.5 2.5 0 0 1 0-5Zm8 0a2.5 2.5 0 1 1 0 5 2.5 2.5 0 0 1 0-5Zm8 0a2.5 2.5 0 1 1 0 5 2.5 2.5 0 0 1 0-5Z" fill="#bdc1ff" fill-rule="evenodd"/></svg>
 
 
             </div>
@@ -281,7 +279,7 @@
 
               <h4>Social</h4>
 
-              <img class="ellipsis" src="images/icon-ellipsis.svg" alt="Ellipsis">
+              <svg width="21" height="5" xmlns="http://www.w3.org/2000/svg"><path class="ellipsis" d="M2.5 0a2.5 2.5 0 1 1 0 5 2.5 2.5 0 0 1 0-5Zm8 0a2.5 2.5 0 1 1 0 5 2.5 2.5 0 0 1 0-5Zm8 0a2.5 2.5 0 1 1 0 5 2.5 2.5 0 0 1 0-5Z" fill="#bdc1ff" fill-rule="evenodd"/></svg>
 
 
             </div>
@@ -329,7 +327,7 @@
 
               <h4>Self Care</h4>
 
-              <img class="ellipsis" src="images/icon-ellipsis.svg" alt="Ellipsis">
+              <svg width="21" height="5" xmlns="http://www.w3.org/2000/svg"><path class="ellipsis" d="M2.5 0a2.5 2.5 0 1 1 0 5 2.5 2.5 0 0 1 0-5Zm8 0a2.5 2.5 0 1 1 0 5 2.5 2.5 0 0 1 0-5Zm8 0a2.5 2.5 0 1 1 0 5 2.5 2.5 0 0 1 0-5Z" fill="#bdc1ff" fill-rule="evenodd"/></svg>
 
 
             </div>
@@ -383,6 +381,8 @@
   <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+
+  <script src="index.js"></script>
 
 </body>
 
