--- a/index.html
+++ b/index.html
@@ -66,11 +66,11 @@
 
           </div>
 
-          <div class="change-view">
+          <div class="change-timeframe">
 
-            <a href="#"><h3>Daily</h3></a>
-            <a href="#"><h3>Weekly</h3></a>
-            <a href="#"><h3>Monthly</h3></a>
+            <h3 class="timeframe active">Daily</h3>
+            <h3 class="timeframe">Weekly</h3>
+            <h3 class="timeframe">Monthly</h3>
 
           </div>
 
@@ -86,41 +86,36 @@
 
             <div id="work" class="tracker-header">
 
-              <img class="tracker-icon" src="images/icon-work.svg" alt="Work Icon">
-
               <div class="tracker-body">
 
-                <div class="current">
+                <div class="title-section">
 
-                  <h4>Work</h4>
+                  <h4 class="title">Work</h4>
 
-                  <svg width="21" height="5" xmlns="http://www.w3.org/2000/svg"><path class="ellipsis" d="M2.5 0a2.5 2.5 0 1 1 0 5 2.5 2.5 0 0 1 0-5Zm8 0a2.5 2.5 0 1 1 0 5 2.5 2.5 0 0 1 0-5Zm8 0a2.5 2.5 0 1 1 0 5 2.5 2.5 0 0 1 0-5Z" fill="#bdc1ff" fill-rule="evenodd"/></svg>
+                  <div class="ellipsis-container">
+                    <svg width="21" height="5" xmlns="http://www.w3.org/2000/svg">
+                      <path class="ellipsis" d="M2.5 0a2.5 2.5 0 1 1 0 5 2.5 2.5 0 0 1 0-5Zm8 0a2.5 2.5 0 1 1 0 5 2.5 2.5 0 0 1 0-5Zm8 0a2.5 2.5 0 1 1 0 5 2.5 2.5 0 0 1 0-5Z" fill-rule="evenodd" />
+                    </svg>
+
+                    <div class="single-nav">
+                      <p class="single-timeframe work">Daily</p>
+                      <p class="single-timeframe work">Weekly</p>
+                      <p class="single-timeframe work">Monthly</p>
+                    </div>
+
+                  </div>
+
+
 
                 </div>
 
-                <div class="previous">
+                <div class="timeframe-section">
 
-                  <h1>32hrs</h1>
+                  <h1 class="current work">32hrs</h1>
 
-                  <p>Last Week - 36hrs</p>
+                  <p class="previous work">Last Week - 36hrs</span></p>
 
                 </div>
-
-
-
-                <!-- daily
-                Previous - 7hrs -->
-                <!-- daily
-                32hrs -->
-                <!-- weekly
-                Previous - 36hrs -->
-                <!-- weekly
-                103hrs -->
-                <!-- monthly
-                Previous - 128hrs -->
-                <!-- monthly -->
-
-
 
               </div>
 
@@ -132,40 +127,37 @@
 
             <div id="play" class="tracker-header">
 
-              <img class="tracker-icon" src="images/icon-play.svg" alt="Play Icon">
-
               <div class="tracker-body">
 
-                <div class="current">
+                <div class="title-section">
 
 
-                  <h4>Play</h4>
+                  <h4 class="title">Play</h4>
 
-                  <svg width="21" height="5" xmlns="http://www.w3.org/2000/svg"><path class="ellipsis" d="M2.5 0a2.5 2.5 0 1 1 0 5 2.5 2.5 0 0 1 0-5Zm8 0a2.5 2.5 0 1 1 0 5 2.5 2.5 0 0 1 0-5Zm8 0a2.5 2.5 0 1 1 0 5 2.5 2.5 0 0 1 0-5Z" fill="#bdc1ff" fill-rule="evenodd"/></svg>
+                  <div class="ellipsis-container">
+                    <svg width="21" height="5" xmlns="http://www.w3.org/2000/svg">
+                      <path class="ellipsis" d="M2.5 0a2.5 2.5 0 1 1 0 5 2.5 2.5 0 0 1 0-5Zm8 0a2.5 2.5 0 1 1 0 5 2.5 2.5 0 0 1 0-5Zm8 0a2.5 2.5 0 1 1 0 5 2.5 2.5 0 0 1 0-5Z" fill-rule="evenodd" />
+                    </svg>
+
+                    <div class="single-nav">
+                      <p class="single-timeframe play">Daily</p>
+                      <p class="single-timeframe play">Weekly</p>
+                      <p class="single-timeframe play">Monthly</p>
+                    </div>
+
+                  </div>
+
 
 
                 </div>
 
-                <div class="previous">
+                <div class="timeframe-section">
 
-                  <h1>10hrs</h1>
+                  <h1 class="current play">32hrs</h1>
 
-                  <p>Last Week - 36hrs</p>
+                  <p class="previous play">Last Week - 36hrs</span></p>
 
                 </div>
-
-
-                <!-- daily
-                Previous - 7hrs -->
-                <!-- daily
-                32hrs -->
-                <!-- weekly
-                Previous - 36hrs -->
-                <!-- weekly
-                103hrs -->
-                <!-- monthly
-                Previous - 128hrs -->
-                <!-- monthly -->
 
               </div>
 
@@ -179,40 +171,38 @@
 
             <div id="study" class="tracker-header">
 
-              <img class="tracker-icon" src="images/icon-study.svg" alt="Study Icon">
-
               <div class="tracker-body">
 
 
-                <div class="current">
+                <div class="title-section">
 
 
-                  <h4>Study</h4>
+                  <h4 class="title">Study</h4>
 
-                  <svg width="21" height="5" xmlns="http://www.w3.org/2000/svg"><path class="ellipsis" d="M2.5 0a2.5 2.5 0 1 1 0 5 2.5 2.5 0 0 1 0-5Zm8 0a2.5 2.5 0 1 1 0 5 2.5 2.5 0 0 1 0-5Zm8 0a2.5 2.5 0 1 1 0 5 2.5 2.5 0 0 1 0-5Z" fill="#bdc1ff" fill-rule="evenodd"/></svg>
+                  <div class="ellipsis-container">
+                    <svg width="21" height="5" xmlns="http://www.w3.org/2000/svg">
+                      <path class="ellipsis" d="M2.5 0a2.5 2.5 0 1 1 0 5 2.5 2.5 0 0 1 0-5Zm8 0a2.5 2.5 0 1 1 0 5 2.5 2.5 0 0 1 0-5Zm8 0a2.5 2.5 0 1 1 0 5 2.5 2.5 0 0 1 0-5Z" fill-rule="evenodd" />
+                    </svg>
+
+                    <div class="single-nav">
+                      <p class="single-timeframe study">Daily</p>
+                      <p class="single-timeframe study">Weekly</p>
+                      <p class="single-timeframe study">Monthly</p>
+                    </div>
+
+                  </div>
+
 
 
                 </div>
 
-                <div class="previous">
+                <div class="timeframe-section">
 
-                  <h1>4hrs</h1>
+                  <h1 class="current study">32hrs</h1>
 
-                  <p>Last Week - 36hrs</p>
+                  <p class="previous study">Last Week - 36hrs</span></p>
 
                 </div>
-
-                <!-- daily
-                Previous - 7hrs -->
-                <!-- daily
-                32hrs -->
-                <!-- weekly
-                Previous - 36hrs -->
-                <!-- weekly
-                103hrs -->
-                <!-- monthly
-                Previous - 128hrs -->
-                <!-- monthly -->
 
               </div>
 
@@ -221,168 +211,164 @@
 
           </div>
 
-      <div class="col tracker">
+          <div class="col tracker">
 
-        <div id="exercise" class="tracker-header">
+            <div id="exercise" class="tracker-header">
 
-          <img class="tracker-icon" src="images/icon-exercise.svg" alt="Exercise Icon">
+              <div class="tracker-body">
 
-          <div class="tracker-body">
-
-            <div class="current">
+                <div class="title-section">
 
 
-              <h4>Exercise</h4>
+                  <h4 class="title">Exercise</h4>
 
-              <svg width="21" height="5" xmlns="http://www.w3.org/2000/svg"><path class="ellipsis" d="M2.5 0a2.5 2.5 0 1 1 0 5 2.5 2.5 0 0 1 0-5Zm8 0a2.5 2.5 0 1 1 0 5 2.5 2.5 0 0 1 0-5Zm8 0a2.5 2.5 0 1 1 0 5 2.5 2.5 0 0 1 0-5Z" fill="#bdc1ff" fill-rule="evenodd"/></svg>
+                  <div class="ellipsis-container">
+                    <svg width="21" height="5" xmlns="http://www.w3.org/2000/svg">
+                      <path class="ellipsis" d="M2.5 0a2.5 2.5 0 1 1 0 5 2.5 2.5 0 0 1 0-5Zm8 0a2.5 2.5 0 1 1 0 5 2.5 2.5 0 0 1 0-5Zm8 0a2.5 2.5 0 1 1 0 5 2.5 2.5 0 0 1 0-5Z" fill-rule="evenodd" />
+                    </svg>
 
+                    <div class="single-nav">
+                      <p class="single-timeframe exercise">Daily</p>
+                      <p class="single-timeframe exercise">Weekly</p>
+                      <p class="single-timeframe exercise">Monthly</p>
+                    </div>
+
+                  </div>
+
+
+
+                </div>
+
+                <div class="timeframe-section">
+
+                  <h1 class="current exercise">32hrs</h1>
+
+                  <p class="previous exercise">Last Week - 36hrs</span></p>
+
+                </div>
+
+              </div>
 
             </div>
 
-            <div class="previous">
-
-              <h1>4hrs</h1>
-
-              <p>Last Week - 36hrs</p>
-
-            </div>
-
-            <!-- daily
-            Previous - 7hrs -->
-            <!-- daily
-            32hrs -->
-            <!-- weekly
-            Previous - 36hrs -->
-            <!-- weekly
-            103hrs -->
-            <!-- monthly
-            Previous - 128hrs -->
-            <!-- monthly -->
 
           </div>
 
-        </div>
+          <div class="col tracker">
+
+            <div id="social" class="tracker-header">
+
+              <div class="  tracker-body">
+
+                <div class="title-section">
 
 
-      </div>
+                  <h4 class="title">Social</h4>
 
-      <div class="col tracker">
+                  <div class="ellipsis-container">
+                    <svg width="21" height="5" xmlns="http://www.w3.org/2000/svg">
+                      <path class="ellipsis" d="M2.5 0a2.5 2.5 0 1 1 0 5 2.5 2.5 0 0 1 0-5Zm8 0a2.5 2.5 0 1 1 0 5 2.5 2.5 0 0 1 0-5Zm8 0a2.5 2.5 0 1 1 0 5 2.5 2.5 0 0 1 0-5Z" fill-rule="evenodd" />
+                    </svg>
 
-        <div id="social" class="tracker-header">
+                    <div class="single-nav">
+                      <p class="single-timeframe social">Daily</p>
+                      <p class="single-timeframe social">Weekly</p>
+                      <p class="single-timeframe social">Monthly</p>
+                    </div>
 
-          <img class="tracker-icon" src="images/icon-social.svg" alt="social icon">
-
-          <div class="  tracker-body">
-
-            <div class="current">
-
-
-              <h4>Social</h4>
-
-              <svg width="21" height="5" xmlns="http://www.w3.org/2000/svg"><path class="ellipsis" d="M2.5 0a2.5 2.5 0 1 1 0 5 2.5 2.5 0 0 1 0-5Zm8 0a2.5 2.5 0 1 1 0 5 2.5 2.5 0 0 1 0-5Zm8 0a2.5 2.5 0 1 1 0 5 2.5 2.5 0 0 1 0-5Z" fill="#bdc1ff" fill-rule="evenodd"/></svg>
-
-
-            </div>
-
-            <div class="previous">
-
-              <h1>5hrs</h1>
-
-              <p>Last Week - 36hrs</p>
-
-            </div>
-
-            <!-- daily
-            Previous - 7hrs -->
-            <!-- daily
-            32hrs -->
-            <!-- weekly
-            Previous - 36hrs -->
-            <!-- weekly
-            103hrs -->
-            <!-- monthly
-            Previous - 128hrs -->
-            <!-- monthly -->
-
-          </div>
-
-
-        </div>
+                  </div>
 
 
 
-      </div>
+                </div>
 
+                <div class="timeframe-section">
 
-      <div class="col tracker">
+                  <h1 class="current social">32hrs</h1>
 
-        <div id="self-care" class="tracker-header">
+                  <p class="previous social">Last Week - 36hrs</span></p>
 
-          <img class="tracker-icon" src="images/icon-self-care.svg" alt="Self-care Icon">
+                </div>
 
-          <div class="tracker-body">
-
-            <div class="current">
-
-
-              <h4>Self Care</h4>
-
-              <svg width="21" height="5" xmlns="http://www.w3.org/2000/svg"><path class="ellipsis" d="M2.5 0a2.5 2.5 0 1 1 0 5 2.5 2.5 0 0 1 0-5Zm8 0a2.5 2.5 0 1 1 0 5 2.5 2.5 0 0 1 0-5Zm8 0a2.5 2.5 0 1 1 0 5 2.5 2.5 0 0 1 0-5Z" fill="#bdc1ff" fill-rule="evenodd"/></svg>
+              </div>
 
 
             </div>
 
-            <div class="previous">
 
-              <h1>6hrs</h1>
-
-              <p>Last Week - 36hrs</p>
-
-            </div>
-
-            <!-- daily
-            Previous - 7hrs -->
-            <!-- daily
-            32hrs -->
-            <!-- weekly
-            Previous - 36hrs -->
-            <!-- weekly
-            103hrs -->
-            <!-- monthly
-            Previous - 128hrs -->
-            <!-- monthly -->
 
           </div>
 
 
+          <div class="col tracker">
+
+            <div id="self-care" class="tracker-header">
+
+              <div class="tracker-body">
+
+                <div class="title-section">
+
+
+                  <h4 class="title">Self-Care</h4>
+
+                  <div class="ellipsis-container">
+                    <svg width="21" height="5" xmlns="http://www.w3.org/2000/svg">
+                      <path class="ellipsis" d="M2.5 0a2.5 2.5 0 1 1 0 5 2.5 2.5 0 0 1 0-5Zm8 0a2.5 2.5 0 1 1 0 5 2.5 2.5 0 0 1 0-5Zm8 0a2.5 2.5 0 1 1 0 5 2.5 2.5 0 0 1 0-5Z" fill-rule="evenodd" />
+                    </svg>
+
+                    <div class="single-nav">
+                      <p class="single-timeframe self-care">Daily</p>
+                      <p class="single-timeframe self-care">Weekly</p>
+                      <p class="single-timeframe self-care">Monthly</p>
+                    </div>
+
+                  </div>
+
+
+
+                </div>
+
+                <div class="timeframe-section">
+
+                  <h1 class="current self-care">32hrs</h1>
+
+                  <p class="previous self-care">Last Week - 36hrs</span></p>
+
+                </div>
+
+              </div>
+
+
+            </div>
+
+
+
+          </div>
+
+
         </div>
 
-
-
       </div>
-
-
-  </div>
-
-  </div>
-  </div>
+    </div>
 
 
 
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
+    <div class="attribution">
+      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
+      Coded by <a href="#">Roxan</a>.
+    </div>
 
-  <!-- SCRIPTS -->
+    <!-- SCRIPTS -->
 
-  <!-- JQuery and Bootstrap -->
+    <!-- JQuery and Bootstrap -->
 
-  <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
 
-  <script src="index.js"></script>
+
+    <script src="index.js"></script>
+
 
 </body>
 
